# axum-url-shortener

./: .env.example  .gitignore  Cargo.toml  README.md
src/: database.rs  main.rs  routes.rs
